--- a/package.json
+++ b/package.json
@@ -1,15 +1,36 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6"
-  }
+    "discord-hybrid-sharding": "^2.2.3",
+    "discord.js": "^14.15.3",
+    "indomitable": "^4.1.0",
+    "mongoose": "^8.5.2",
+    "ms": "^2.1.3",
+    "shoukaku": "^4.0.1",
+    "signale": "^1.4.0",
+    "systeminformation": "^5.23.5"
+  },
+  "devDependencies": {
+    "dokdo": "^1.0.1",
+    "nodemon": "^3.1.4"
+  },
+  "scripts": {
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "keywords": [
+    "discord",
+    "music",
+    "music-bot",
+    "discord-bot",
+    "discord.js",
+    "shoukaku",
+    "spotify",
+    "youtube"
+  ],
+  "author": "Punit",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Eclipse"
+  },
+  "homepage": "https://github.com/Eclipse"
 }
